2009-11-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Improve TidyFingerScroll overshooting.

	* src/tidy/tidy-finger-scroll.c (button_release_event_cb):
	  Discard the user's momentum if it's too small under the
	  circumstances described at initial_speed().

2009-11-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#142333 - Ctrl + <char> or Ctrl + <shift> + <char>- Launches
	the contacts application

	* src/home/hd-home.c (hd_home_desktop_key_press,
	hd_home_desktop_key_release): Ignore key events with ControlMask set.

2009-11-11  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-util.c: Small safety tweaks for last commit. Just in 
	  case something is in a strange state, and also changes to avoid
	  warnings when compiled with -fstrict-aliasing -Wall.

	Fixes: NB#144050, NB#146154 : Popup/dialog closing transitions are
	       occurring even when the window is not visible.
	       
	* src/util/hd-util.c/h: Add hd_util_client_obscured, which checks the
	  windows above the parameter to see if they obscure it or not.
	* src/mb/hd-comp-mgr.c: Check with hd_util_client_obscured before
	  starting the unmap transition for dialogs/popups.

2009-11-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.117-1

2009-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#142968 Task Launcher list missing rubberband effect

	* src/launcher/hd-launcher-grid.c 
	(hd_launcher_grid_refresh_v_adjustment):
	  Correct padding at the bottom of the sublauncher and enable
	  the rubber effect.
	* src/tidy/tidy-adjustment.c:
	  Introduced the skirt parameter to allow for temporary overshooting.
	* src/tidy/tidy-finger-scroll.c:
	  * motion_event_cb(): removed unnecessary interpolation
	  * deceleration_new_frame_cb(): redid for rubbing
	  * decel_rate: changed the meaning to be its inverse
	    and changed the value from 0.91 to 0.9

2009-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Thinko/regression fix/memory leak plug.
