@@ -25,6 +25,7 @@ hd_atoms_init (Display * xdpy, Atom * atoms)
     "_HILDON_WM_WINDOW_TYPE_STATUS_MENU",
     "_HILDON_WM_WINDOW_TYPE_ANIMATION_ACTOR",
     "_HILDON_WM_WINDOW_TYPE_REMOTE_TEXTURE",
+    "_NET_WM_WINDOW_TYPE_DND",
 
     "_HILDON_NOTIFICATION_TYPE",
     "_HILDON_NOTIFICATION_TYPE_BANNER",
