@@ -20,6 +20,7 @@ typedef enum HdAtoms
   HD_ATOM_HILDON_WM_WINDOW_TYPE_STATUS_MENU,
   HD_ATOM_HILDON_WM_WINDOW_TYPE_ANIMATION_ACTOR,
   HD_ATOM_HILDON_WM_WINDOW_TYPE_REMOTE_TEXTURE,
+  HD_ATOM_NET_WM_WINDOW_TYPE_DND,
 
   HD_ATOM_HILDON_NOTIFICATION_TYPE,
   HD_ATOM_HILDON_NOTIFICATION_TYPE_BANNER,
